# api/models/Credentials.js
@@ -1,10 +1,3 @@
-/**
- * Credentials.js
- *
- * @description :: A model definition represents a database table/collection.
- * @docs        :: https://sailsjs.com/docs/concepts/models-and-orm/models
- */
-
 module.exports = {
   attributes: {
     login: {
